--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,8 @@
     "js-cookie": "^2.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-signup-login-component": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
