--- a/ui/package.json
+++ b/ui/package.json
@@ -4,11 +4,8 @@
   "private": true,
   "dependencies": {
     "jquery": "^3.4.1",
-    "js-cookie": "^2.2.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-signup-login-component": "^1.2.0"
+    "react-dom": "^16.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
