--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "jquery": "^3.4.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
